@@ -127,6 +127,10 @@
  *  (i.e. configure --enable-ipv6) */
 #undef UPNP_ENABLE_IPV6
 
+/** Defined to 1 if the library has been compiled with unspecified SERVER
+ * header (i.e. configure --enable-unspecified_server) */
+#undef UPNP_ENABLE_UNSPECIFIED_SERVER
+
 /** Defined to 1 if the library has been compiled with OpenSSL support
  *  (i.e. configure --enable-open_ssl) */
 #undef UPNP_ENABLE_OPEN_SSL
